# music

./: .replit  Dockerfile  README.md  RENDER_DEPLOYMENT.md  animated_emojis.py  discord_music_bot.py  pyproject.toml  render.yaml  replit.md  test_interface.html
attached_assets/: Pasted-list-charset-normalizer-certifi-attrs-aiohappyeyeballs-yarl-requests-cffi-aiosignal-yt-dlp--1749997292738_1749997292738.txt
