[project]
name = "discord-music-bot"
version = "1.0.0"
description = "Advanced Discord Music Bot with audio effects"
dependencies = [
    "discord.py==2.3.2",
    "yt-dlp==2023.12.30",
    "spotipy==2.24.0",
    "opuslib==3.0.1",
    "PyNaCl==1.5.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"